cluster/apps/doleo/doleo-client/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doleo-client-production
  namespace: doleo
  labels:
    app: doleo-client-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doleo-client-production
  template:
    metadata:
      labels:
        app: doleo-client-production
    spec:
      containers:
        - name: doleo-client-production
          image: spuxx/doleo-2-client # {"$imagepolicy": "doleo:doleo-client-production"}
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
